--- a/Givemeacar/src/main/resources/application.properties
+++ b/Givemeacar/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 
 #Configure hibernate to automatically create table in the database
 spring.jpa.hibernate.ddl-auto = update
+
+spring.jackson.date-format=dd-MM-yyyy HH:mm:ss
+spring.jackson.time-zone=Europe/Paris
